{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "5632cb3c-c51d-4aa5-ac9c-b6af89872a06",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "00cb8c48-3891-4028-b121-24a4d5103825",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "WeaponChange",
                    "type": "Value",
                    "id": "ed36b3a2-33bf-4fcc-9e22-c42a5dbbb8da",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LAttack",
                    "type": "Button",
                    "id": "77c4698f-a370-4157-b4f0-245339f90385",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RAttack",
                    "type": "Button",
                    "id": "8aa7402c-b1ca-4eca-bcb9-85fca101d524",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "0c7b1666-7400-474e-b5b0-f7029f4ad24f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CursorMove",
                    "type": "Value",
                    "id": "b911c0de-b920-429f-a0bb-9913a1861aff",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OpenCloseMenu",
                    "type": "Button",
                    "id": "76e439d4-3cff-456a-8dcf-56dcb21c51b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "3815a076-45f2-44f9-8fc4-31d2b08a36c5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b719e03f-016c-420b-b2b7-af2ae65627fe",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1f81cc45-b4ea-475f-9114-706a052cd5f8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5e9677e4-67e0-4557-b9e8-82000b431611",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6257bc9b-e0fd-414a-ae11-23677072f961",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ccb3ad9e-98da-4152-b376-45b50db2515a",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponChange",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb64d346-a81f-42ad-b1d1-e39fb1e13b8f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(pressPoint=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "LAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ceed1e4-2199-4b0e-acd7-ae9f05fb4f18",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(pressPoint=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "RAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "618ca489-8f5b-4ba4-ab86-412722d61462",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7370c4f8-3358-4b3f-85ef-3bcc20d26e73",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CursorMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18fb51d5-646d-4907-9993-e441144454c6",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCloseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "f07cbd9c-6f2e-44dc-8088-358f39204b57",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "6d6c6787-2e2f-4992-9f10-176a1fa48cca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PageDown",
                    "type": "Button",
                    "id": "3c1c47b4-415a-4a11-ab74-b0bfbdb9725b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "b4735f6a-9103-470e-b250-aa28fe76aa6b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OpenCloseMenu",
                    "type": "Button",
                    "id": "ee592be5-280b-4e17-b435-c769b9cbf8b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "06acc0e0-df14-4c27-bf60-018499330cb0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e2975ff-63ee-48df-8ac1-a8a6c9e2ac82",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PageDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19e31915-f4cf-4bd0-b493-0fa04db7bbcc",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94c40e81-4f5f-4664-89ab-ecbe74da06f1",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenCloseMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Talk",
            "id": "3cbd8c66-dbe5-43b2-8225-3c4e56eafa9a",
            "actions": [
                {
                    "name": "PageUp",
                    "type": "Button",
                    "id": "9b353bce-adac-40f0-ba7a-5cadafd58aa5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e6c17d21-6df1-4c9c-97ee-2c3afa08b3d9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PageUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "f3680171-c36e-4e36-bb2f-809ea0ba1be8",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "330654ef-6f80-4ad1-9226-61b037db03e5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseScroll",
                    "type": "Value",
                    "id": "0117d200-e6ac-4b64-9596-34884c824eb1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "e50c38ad-fb2d-4a38-a1d1-fab220d21e57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MenuClose",
                    "type": "Button",
                    "id": "439ddfb7-172a-4226-acc7-60ed6615df86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "84ea5d3a-4fe0-473e-8dae-72a15225cf44",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46b54943-d85c-473e-a579-fd398871a903",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c65f57ce-43c2-409a-9456-dc0035ac44e7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62485e45-0866-4856-9445-35a0c59b9c07",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuClose",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}